Adding config to access MongoDB with database.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-load": "^1.1.16",
+    "mongoose": "^5.4.15",
     "pg-promise": "^8.5.5"
   }
 }
